# shaman

./: Cargo.toml  README.md  bacon.toml
.github/workflows/: rust.yml
maps/: escalator.txt  fourway.txt  maze.txt  narrow.txt  roundabout.txt  swap.txt
maps/impossible/: invalid-symbol.txt  no-path.txt  no-space-to-evade.txt
src/: astar.rs  error.rs  layout.rs  lib.rs  main.rs  parser.rs  pbs.rs  robot.rs  route.rs
tests/: suite.rs
