[package]
name = "shaman"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
derivative = "2.2.0"
enum-as-inner = "0.7.0"
eyre = "0.6.12"
itertools = "0.14.0"
nom = "8"
nom_locate = "5.0.0"
ordered-float = "5.1.0"
petgraph = "0.8.3"
termion = "4.0.6"
