[package]
name = "shaman"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
derivative = "2.2.0"
enum-as-inner = "0.7.0"
itertools = "0.14.0"
miette = { version = "7.6.0", features = ["fancy"] }
nom = { version = "8", features = ["std"] }
nom_locate = "5"
ordered-float = "5.1.0"
petgraph = "0.8.3"
rustc-hash = "2.1.1"
termion = "4.0.6"
thiserror = "2.0.18"

[dev-dependencies]
rstest = "0.26.1"
